--- a/.github/workflows/sniff.yml
+++ b/.github/workflows/sniff.yml
@@ -36,7 +36,7 @@ jobs:
     - uses: ./.github/actions/persist
       id: sw_vers
       with:
-        first-column: os
+        first-column: env
     - uses: jsdaniell/create-json@v1
       with:
         name: versions.json
