--- a/.github/workflows/sniff.yml
+++ b/.github/workflows/sniff.yml
@@ -19,6 +19,29 @@ jobs:
     - uses: ./.github/actions/persist
       with:
         key: ${{ matrix.os }}-version
+        value: ${{ steps.sw_vers.outputs.os }}
+    - uses: ./.github/actions/persist
+      with:
+        key: ${{ matrix.os }}-swift
+        value: ${{ steps.sw_vers.outputs.swift }}
+
+  ubuntu:
+    strategy:
+      matrix:
+        os:
+          - ubuntu-16.04
+          - ubuntu-18.04
+          - ubuntu-20.04
+    continue-on-error: ${{ matrix.os == 'ubuntu-16.04' }}
+    runs-on: ${{ matrix.os }}
+    steps:
+    - run:
+    - uses: actions/checkout@v2
+    - uses: ./.github/actions/sw_vers
+      id: sw_vers
+    - uses: ./.github/actions/persist
+      with:
+        key: ${{ matrix.os }}-version
         value: ${{ steps.sw_vers.outputs.macOS }}
     - uses: ./.github/actions/persist
       with:
