--- a/.github/workflows/sniff.yml
+++ b/.github/workflows/sniff.yml
@@ -38,7 +38,8 @@ jobs:
     steps:
     - run: |
         for xcode in $(mdfind kMDItemCFBundleIdentifier = com.apple.dt.Xcode); do
-          v="$v $(mdls -raw -name kMDItemVersion $xcode)"
+          newv=$(mdls -raw -name kMDItemVersion "$xcode")
+          v="$v,$newv"
         done
         echo "XcodeVersions=$v" >> $GITHUB_ENV
     - uses: actions/checkout@v2
