--- a/.github/workflows/sniff.yml
+++ b/.github/workflows/sniff.yml
@@ -6,15 +6,16 @@ on:
     paths:
       - .github/workflows/sniff.yml
 jobs:
-  macOS:
+  os:
     strategy:
       matrix:
         os:
-          - macos-latest
           - macos-10.15
-          - macos-11
+          - ubuntu-16.04
+          - ubuntu-18.04
+          - ubuntu-20.04
+    continue-on-error: ${{ matrix.os == 'ubuntu-16.04' }}
     runs-on: ${{ matrix.os }}
-    continue-on-error: ${{ matrix.os == 'macos-11' }}
     steps:
     - uses: actions/checkout@v2
     - uses: ./.github/actions/sw_vers
@@ -22,15 +23,36 @@ jobs:
     - uses: ./.github/actions/persist
       with:
         key: ${{ matrix.os }}-version
-        value: ${{ steps.sw_vers.outputs.macOS }}
+        value: ${{ steps.sw_vers.outputs.os }}
     - uses: ./.github/actions/persist
       with:
         key: ${{ matrix.os }}-swift
         value: ${{ steps.sw_vers.outputs.swift }}
 
+  xcode:
+    strategy:
+      matrix:
+        os:
+          - macos-10.15
+    runs-on: ${{ matrix.os }}
+    steps:
+    - run: |
+        for xcode in $(mdfind kMDItemCFBundleIdentifier = com.apple.dt.Xcode); do
+          V=$(mdls -raw -name kMDItemVersion "$xcode")
+          v="$v $V"
+        done
+        echo "XcodeVersions=$v" >> $GITHUB_ENV
+    - uses: actions/checkout@v2
+    - uses: ./.github/actions/persist
+      with:
+        key: ${{ matrix.os }}-xcodes
+        value: ${{ env.XcodeVersions }}
+
   persist:
     runs-on: ubuntu-latest
-    needs: macOS
+    needs:
+      - os
+      - xcode
     steps:
     - uses: actions/checkout@v2
     - uses: ./.github/actions/persist
@@ -40,12 +62,14 @@ jobs:
     - uses: jsdaniell/create-json@v1
       with:
         name: versions.json
-        json: "${{ steps.sw_vers.outputs.json }}"
-    - run: git config user.name github-actions
-    - run: git config user.email github-actions@github.com
-    - run: git add versions.json
-    - run: git commit -m "[cron] $(date '+%Y-%m-%d')"
-    - run: git push
+        json: ${{ steps.sw_vers.outputs.json }}
+
+    - run: echo "stamp=$(date '+%Y-%m-%d')" >> $GITHUB_ENV
       if: ${{ !github.event.pull_request }}
+    - uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: '[cron] ${{ env.stamp }}'
+      if: ${{ !github.event.pull_request }}
+
     - run: cat versions.json | jq
       if: ${{ github.event.pull_request }}
