--- a/.github/workflows/sniff.yml
+++ b/.github/workflows/sniff.yml
@@ -5,6 +5,9 @@ on:
   pull_request:
     paths:
       - .github/workflows/sniff.yml
+  push:
+    paths:
+      - .github/workflows/sniff.yml
 jobs:
   os:
     strategy:
@@ -22,11 +25,11 @@ jobs:
       id: sw_vers
     - uses: ./.github/actions/persist
       with:
-        key: ${{ matrix.os }}-version
-        value: ${{ steps.sw_vers.outputs.os }}
+        key: ${{ steps.sw_vers.outputs.root-key }}-env
+        value: ${{ matrix.os }}
     - uses: ./.github/actions/persist
       with:
-        key: ${{ matrix.os }}-swift
+        key: ${{ steps.sw_vers.outputs.root-key }}-swift
         value: ${{ steps.sw_vers.outputs.swift }}
 
   xcode:
@@ -36,6 +39,9 @@ jobs:
           - macos-10.15
     runs-on: ${{ matrix.os }}
     steps:
+    - uses: actions/checkout@v2
+    - uses: ./.github/actions/sw_vers
+      id: sw_vers
     - run: |
         for xcode in $(mdfind kMDItemCFBundleIdentifier = com.apple.dt.Xcode); do
           V=$(mdls -raw -name kMDItemVersion "$xcode")
@@ -47,7 +53,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: ./.github/actions/persist
       with:
-        key: ${{ matrix.os }}-xcodes
+        key: ${{ steps.sw_vers.outputs.root-key }}-xcodes
         value: ${{ env.XcodeVersions }}
 
   latest:
@@ -63,8 +69,8 @@ jobs:
       id: sw_vers
     - uses: ./.github/actions/persist
       with:
-        key: ${{ matrix.os }}-latest
-        value: ${{ steps.sw_vers.outputs.os }}
+        key: ${{ steps.sw_vers.outputs.root-key }}-latest
+        value: true
 
   persist:
     runs-on: ubuntu-latest
