--- a/.github/workflows/sniff.yml
+++ b/.github/workflows/sniff.yml
@@ -5,6 +5,11 @@ on:
   pull_request:
     paths:
       - .github/workflows/sniff.yml
+  push:
+    branches:
+      - main
+    paths:
+      - .github/workflows/sniff.yml
 jobs:
   os:
     strategy:
@@ -22,11 +27,11 @@ jobs:
       id: sw_vers
     - uses: ./.github/actions/persist
       with:
-        key: ${{ matrix.os }}-version
-        value: ${{ steps.sw_vers.outputs.os }}
+        key: ${{ steps.sw_vers.outputs.root-key }}-env
+        value: ${{ matrix.os }}
     - uses: ./.github/actions/persist
       with:
-        key: ${{ matrix.os }}-swift
+        key: ${{ steps.sw_vers.outputs.root-key }}-swift
         value: ${{ steps.sw_vers.outputs.swift }}
 
   xcode:
@@ -36,6 +41,9 @@ jobs:
           - macos-10.15
     runs-on: ${{ matrix.os }}
     steps:
+    - uses: actions/checkout@v2
+    - uses: ./.github/actions/sw_vers
+      id: sw_vers
     - run: |
         for xcode in $(mdfind kMDItemCFBundleIdentifier = com.apple.dt.Xcode); do
           V=$(mdls -raw -name kMDItemVersion "$xcode")
@@ -47,14 +55,31 @@ jobs:
     - uses: actions/checkout@v2
     - uses: ./.github/actions/persist
       with:
-        key: ${{ matrix.os }}-xcodes
+        key: ${{ steps.sw_vers.outputs.root-key }}-xcodes
         value: ${{ env.XcodeVersions }}
+
+  latest:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os:
+          - macos-latest
+          - ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ./.github/actions/sw_vers
+      id: sw_vers
+    - uses: ./.github/actions/persist
+      with:
+        key: ${{ steps.sw_vers.outputs.root-key }}-latest
+        value: true
 
   persist:
     runs-on: ubuntu-latest
     needs:
       - os
       - xcode
+      - latest
     steps:
     - uses: actions/checkout@v2
     - uses: ./.github/actions/persist
