--- a/.github/workflows/sniff.yml
+++ b/.github/workflows/sniff.yml
@@ -33,6 +33,10 @@ jobs:
       with:
         key: ${{ steps.sw_vers.outputs.root-key }}-swift
         value: ${{ steps.sw_vers.outputs.swift }}
+    - uses: ./.github/actions/persist
+      with:
+        key: ${{ steps.sw_vers.outputs.root-key }}-version
+        value: ${{ steps.sw_vers.outputs.os }}
 
   xcode:
     strategy:
