--- a/.github/workflows/sniff.yml
+++ b/.github/workflows/sniff.yml
@@ -37,8 +37,8 @@ jobs:
     - run: env > ${{ martrix.os }}.env
     - uses: actions/upload-artifact@v2
       with:
-        name: ${{ martrix.os }}.env
-        path: ${{ martrix.os }}.env
+        name: ${{ matrix.os }}.env
+        path: ${{ matrix.os }}.env
 
   xcode:
     strategy:
