--- a/.github/workflows/sniff.yml
+++ b/.github/workflows/sniff.yml
@@ -98,6 +98,10 @@ jobs:
         name: versions.json
         json: ${{ steps.sw_vers.outputs.json }}
 
+    - run: |
+        mv **/*.env .
+        git add *.env
+
     - run: echo "stamp=$(date '+%Y-%m-%d')" >> $GITHUB_ENV
       if: ${{ !github.event.pull_request }}
     - uses: stefanzweifel/git-auto-commit-action@v4
@@ -107,5 +111,3 @@ jobs:
 
     - run: cat versions.json | jq
       if: ${{ github.event.pull_request }}
-
-    - run: find .
