--- a/.github/workflows/sniff.yml
+++ b/.github/workflows/sniff.yml
@@ -26,7 +26,8 @@ jobs:
     strategy:
       matrix:
         os: ${{fromJson(needs.json.outputs.matrix)}}
-    continue-on-error: ${{ matrix.os == 'ubuntu-16.04' }}
+    continue-on-error: true
+    # ^^ some of the images we collect in sniff-images.yml are invalid
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
