--- a/.github/workflows/sniff.yml
+++ b/.github/workflows/sniff.yml
@@ -17,6 +17,7 @@ jobs:
       matrix:
         os:
           - macos-10.15
+          - macos-11
           - ubuntu-16.04
           - ubuntu-18.04
           - ubuntu-20.04
@@ -46,6 +47,7 @@ jobs:
       matrix:
         os:
           - macos-10.15
+          - macos-11
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
