--- a/.github/workflows/sniff.yml
+++ b/.github/workflows/sniff.yml
@@ -18,9 +18,11 @@ jobs:
         os:
           - macos-10.15
           - macos-11
-          - ubuntu-16.04
+          - macos-12
+        # - ubuntu-16.04
           - ubuntu-18.04
           - ubuntu-20.04
+          - ubuntu-22.04
     continue-on-error: ${{ matrix.os == 'ubuntu-16.04' }}
     runs-on: ${{ matrix.os }}
     steps:
